# meble_sklep_serwer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml  deploy_master.yml  test_dev.yml
data/: data.db
migrations/data/: 20260711185727_init_schema.sql  20260724164738_extract_user_data.sql  20260724174719_add_surname_to_users_data.sql
src/api/login/: usrs.json
src/api/products/: items.json
src/auth/: Cargo.toml
src/auth/src/: jwt.rs  lib.rs
src/auth/src/claims_thingy/: claims.rs
src/auth/src/file_handling/: json_handling.rs  mod.rs
src/avif_image_handler/: Cargo.toml
src/avif_image_handler/src/: lib.rs  save.rs
src/avif_image_handler/src/wczytywanie/: avif.rs  check_extension.rs  exr.rs  ff.rs  jpg.rs  main_wczytywanie.rs  mod.rs  png.rs  qoi.rs  tga.rs  unknown.rs  webp.rs
src/id_handling/: Cargo.toml
src/id_handling/src/: create.rs  enums_structs.rs  lib.rs
src/login/: Cargo.toml
src/login/src/: lib.rs  user.rs
src/models/: Cargo.toml
src/models/src/: handle.rs
src/products/: Cargo.toml
src/products/src/: lib.rs
src/products/src/cart/: calc.rs  enumy.rs  mod.rs
src/products/src/get_items/: enum_structs.rs  handler.rs  lists.rs  mod.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/register/: handler.rs
src/server/src/requests/: register.rs
src/server/src/response/: login.rs
src/server/src/router/: routing.rs
src/server/src/tests/: mod.rs
src/server/src/websoc/: mod.rs  websocet.rs
src/sqlite_serv/: Cargo.toml
src/sqlite_serv/src/: commands.rs  handler.rs  image_handling.rs  lib.rs  send_photo.rs  sql.rs
src/sqlite_serv/src/auth/: claims.rs  jwt.rs  mod.rs  permissions.rs  sending_data.rs
src/sqlite_serv/src/foto/: get.rs  mod.rs  upload.rs
src/sqlite_serv/src/model/: get.rs  mod.rs  post.rs  put.rs  upload.rs
src/sqlite_serv/src/odleglosci_mapa/: mod.rs
src/sqlite_serv/src/product/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/sqlite_serv/src/sql_image_handling/: db_merge.rs  mod.rs
src/sqlite_serv/src/sql_products/: mod.rs  wczytaj.rs
src/sqlite_serv/src/user/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/sqlite_serv/src/zamowienia/: get.rs  ksef.rs  mod.rs  post.rs  put.rs
src/tests/: server_test.rs
