[workspace]
members = [
    "src/server",
    "src/login", "src/auth", "src/products", "src/models", "src/id_handling",
]

resolver = "3"
[profile.release]
panic = "abort"
strip = true
opt-level = "z"
debug = 0

[workspace.dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tokio = { version = "1.52.3", features = ["full"] }
serde_json = "1.0.150"
futures-util = "0.3.32"
tokio-tungstenite = "0.26.2"
chrono = "0.4.45"
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
regex = "1.12.4"
rand = "0.9.4"
dotenvy = "0.15.7"
tower = { version = "0.5.3", features = ["limit"] }
tower_governor = "0.8.0"
bcrypt = "0.19.2"
http = "1.4.2"
axum-core = "0.5.6"

#[build-dependencies]
#chrono = "0.4.45"
