[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
#futures-util = { workspace = true }
rand = { workspace = true }
login = { path = "../login" }
serde_json = { workspace = true }
axum-core = { workspace = true }
sqlx = { workspace = true }

