[package]
name = "avif_image_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
libheif-rs = { workspace = true }
image = { workspace = true }
zstd = { workspace = true }
bzip2 = { workspace = true }
xz2 = { workspace = true }
strum = { workspace = true }
exr = { workspace = true }
jpeg-decoder = { workspace = true }
png = { workspace = true }
webp = { workspace = true }
