[package]
name = "login"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
dotenvy = "0.15.7"
#serde_json = "1.0.150"
#axum = { workspace = true }
#http = { workspace = true }
#jsonwebtoken = { workspace = true }