[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
#tokio-tungstenite = { workspace = true }
chrono = { workspace = true }
login = { path = "../login" }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
#rand = "0.9.4"
dotenvy = { workspace = true }
#tower = { version = "0.5.3", features = ["limit"] }
tower_governor = { workspace = true }
products = { path = "../products" }
models = { path = "../models" }
auth = { path = "../auth" }