[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
tower_governor = { workspace = true }
sqlite_serv = { path = "../sqlite_serv" }
sqlx = { workspace = true}
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
http = { workspace = true }
axum-server = { workspace = true }
